'Restart and Run All' so cells are sequential

--- a/notebooks/025_MODEL_knn.ipynb
+++ b/notebooks/025_MODEL_knn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 025: KNN Models using final predictor set\n",
+    "# Notebook 025: KNN Models using Final Predictor Set\n",
     "\n",
     "This notebook contains a KNN crime-type classifier model using an initial set of property-related predictors.\n",
     "\n",
@@ -20,9 +20,7 @@
     "       'owner-occupied-ratio-3yr-cagr', 'residential-median-value-3yr-cagr',\n",
     "       'residential-gini-coef-3yr-cagr', 'Tuesday', 'Wednesday', 'Thursday',\n",
     "       'Friday', 'Saturday', 'Sunday', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
-    "       'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec', 'night'\n",
-    "\n",
-    "The baseline models tested are Multi-class KNN Models with and without regularization."
+    "       'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec', 'night'"
    ]
   },
   {
@@ -660,7 +658,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 40s\n"
+      "Wall time: 1min 46s\n"
      ]
     }
    ],
@@ -709,7 +707,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 24.4 s\n"
+      "Wall time: 27.8 s\n"
      ]
     }
    ],
@@ -727,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -892,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +996,7 @@
     "\n",
     "# run KNN for each value of k in k_values\n",
     "for k in k_values:\n",
-    "    knn = KNeighborsClassifier(n_neighbors=k, p=1, n_jobs=-1)  #p=1 manhattan distance is 0.02 better\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k, p=1, n_jobs=-1)\n",
     "    knn.fit(X_train_scaled, y_train)\n",
     "    KNNModels_2[k] = knn\n",
     "\n",
@@ -1038,7 +1036,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 29s\n"
+      "Wall time: 2min 23s\n"
      ]
     }
    ],
@@ -1087,7 +1085,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 30.3 s\n"
+      "Wall time: 46.6 s\n"
      ]
     }
    ],
@@ -1105,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1270,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1362,7 @@
        "                      weights='distance')}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1374,7 @@
     "\n",
     "# run KNN for each value of k in k_values\n",
     "for k in k_values:\n",
-    "    knn = KNeighborsClassifier(n_neighbors=k, weights='distance', p=1, n_jobs=-1)  #p=1 manhattan distance is 0.02 better\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k, weights='distance', p=1, n_jobs=-1)\n",
     "    knn.fit(X_train_scaled, y_train)\n",
     "    KNNModels_3[k] = knn\n",
     "\n",
@@ -1416,7 +1414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 49s\n"
+      "Wall time: 2min 44s\n"
      ]
     }
    ],
@@ -1465,7 +1463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 24.8 s\n"
+      "Wall time: 45.3 s\n"
      ]
     }
    ],
@@ -1483,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -1648,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1790,7 @@
     "\n",
     "# run KNN for each value of k in k_values\n",
     "for k in k_values:\n",
-    "    knn = KNeighborsClassifier(n_neighbors=k, weights='distance', p=1, n_jobs=-1)  #p=1 manhattan distance is 0.02 better\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k, weights='distance', p=1, n_jobs=-1)\n",
     "    knn.fit(X_train_scaled, y_train)\n",
     "    KNNModels[k] = knn\n",
     "\n",
@@ -1828,7 +1826,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 22min 43s\n"
+      "Wall time: 24min 30s\n"
      ]
     }
    ],
@@ -1846,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +2042,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9min 15s\n"
+      "Wall time: 9min 11s\n"
      ]
     }
    ],
@@ -2064,7 +2062,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 8min 59s\n"
+      "Wall time: 9min 5s\n"
      ]
     }
    ],
@@ -2104,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2138,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2211,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2418,7 +2416,7 @@
        "Total      859  347  3524  429  7636  274  14469  931  3619  32088"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2432,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2495,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2692,7 +2690,7 @@
        "8      0.177778  0.900105  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2710,7 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2808,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2834,7 +2832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2901,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2923,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3021,7 +3019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
