--- a/notebooks/009_EDA_crime_incident_reports.ipynb
+++ b/notebooks/009_EDA_crime_incident_reports.ipynb
@@ -571,8 +571,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.1 s, sys: 289 ms, total: 17.4 s\n",
-      "Wall time: 5.97 s\n"
+      "CPU times: user 5.71 s, sys: 429 ms, total: 6.14 s\n",
+      "Wall time: 5.37 s\n"
      ]
     }
    ],
@@ -727,8 +727,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 36.1 s, sys: 503 ms, total: 36.6 s\n",
-      "Wall time: 27.3 s\n"
+      "CPU times: user 27.3 s, sys: 196 ms, total: 27.5 s\n",
+      "Wall time: 27.5 s\n"
      ]
     }
    ],
@@ -1244,7 +1244,7 @@
     "\n",
     "# set savepaths\n",
     "savepaths_list = [\n",
-    "    os.path.join(FIGURES_ROOT, 'crime-reports-by-{}.png'.format(shapetype))\n",
+    "    os.path.join(FIGURES_ROOT, 'crime-reports-by-{}.png'.format(shapetype.replace(\" \",\"\")))\n",
     "    for shapetype in shapetype_list\n",
     "]\n",
     "\n",
@@ -2461,7 +2461,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2614,8 +2616,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.09 s, sys: 15.9 ms, total: 3.11 s\n",
-      "Wall time: 3.1 s\n"
+      "CPU times: user 3.39 s, sys: 364 ms, total: 3.75 s\n",
+      "Wall time: 2.98 s\n"
      ]
     }
    ],
@@ -2752,7 +2754,7 @@
     "\n",
     "# set savepaths\n",
     "savepaths_list = [\n",
-    "    os.path.join(FIGURES_ROOT, 'crime-reports-FINAL-by-{}.png'.format(shapetype))\n",
+    "    os.path.join(FIGURES_ROOT, 'crime-reports-FINAL-by-{}.png'.format(shapetype.replace(\" \", \"\")))\n",
     "    for shapetype in shapetype_list\n",
     "]\n",
     "\n",
@@ -3377,400 +3379,6 @@
    "outputs": [],
    "source": [
     "crime_df.to_csv(os.path.join(FEATURES_ROOT, 'crime-records-for-model-no-features-added.csv'), index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add property-related engineered features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_feat_prop = pd.read_csv(readfile_feat_property, dtype={'shape-id': str, 'fiscal-year': int})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 13002 entries, 0 to 13001\n",
-      "Data columns (total 5 columns):\n",
-      "shape-id       13002 non-null object\n",
-      "fiscal-year    13002 non-null int64\n",
-      "value          12927 non-null float64\n",
-      "shape-type     13002 non-null object\n",
-      "metric         13002 non-null object\n",
-      "dtypes: float64(1), int64(1), object(3)\n",
-      "memory usage: 508.0+ KB\n",
-      "None\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>shape-id</th>\n",
-       "      <th>fiscal-year</th>\n",
-       "      <th>value</th>\n",
-       "      <th>shape-type</th>\n",
-       "      <th>metric</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00000</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>37000.0</td>\n",
-       "      <td>zipcode</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>02026</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>zipcode</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>02108</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>691300.0</td>\n",
-       "      <td>zipcode</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>02109</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>456950.0</td>\n",
-       "      <td>zipcode</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>02110</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>566512.5</td>\n",
-       "      <td>zipcode</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  shape-id  fiscal-year     value shape-type                    metric\n",
-       "0    00000         2013   37000.0    zipcode  residential-median-value\n",
-       "1    02026         2013       NaN    zipcode  residential-median-value\n",
-       "2    02108         2013  691300.0    zipcode  residential-median-value\n",
-       "3    02109         2013  456950.0    zipcode  residential-median-value\n",
-       "4    02110         2013  566512.5    zipcode  residential-median-value"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(df_feat_prop.info())\n",
-    "df_feat_prop.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9570, 5)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# keep only census tract level metrics\n",
-    "df_feat_prop = df_feat_prop.loc[df_feat_prop['shape-type']=='census tract']\n",
-    "df_feat_prop.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "commercial-mix-ratio                 1267\n",
-      "industrial-mix-ratio                 1267\n",
-      "owner-occupied-ratio                 1190\n",
-      "residential-median-value             1183\n",
-      "residential-gini-coef                1183\n",
-      "commercial-mix-ratio-3yr-cagr         724\n",
-      "industrial-mix-ratio-3yr-cagr         724\n",
-      "owner-occupied-ratio-3yr-cagr         680\n",
-      "residential-median-value-3yr-cagr     676\n",
-      "residential-gini-coef-3yr-cagr        676\n",
-      "Name: metric, dtype: int64\n",
-      "\n",
-      "['commercial-mix-ratio', 'industrial-mix-ratio', 'owner-occupied-ratio', 'residential-median-value', 'residential-gini-coef', 'commercial-mix-ratio-3yr-cagr', 'industrial-mix-ratio-3yr-cagr', 'owner-occupied-ratio-3yr-cagr', 'residential-median-value-3yr-cagr', 'residential-gini-coef-3yr-cagr']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# make list of metrics for matching\n",
-    "print(df_feat_prop['metric'].value_counts())\n",
-    "\n",
-    "prop_metrics_list = list(df_feat_prop['metric'].value_counts().index)\n",
-    "\n",
-    "print()\n",
-    "print(prop_metrics_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "403    9803002019\n",
-       "504    0002022019\n",
-       "526    0606002019\n",
-       "547    0607002019\n",
-       "561    0801002019\n",
-       "Name: tract-match-key, dtype: object"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crime_df['tract-match-key'] = (crime_df['TRACTCE10'].astype(str) + crime_df['year'].astype(str)).values\n",
-    "\n",
-    "crime_df['tract-match-key'].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>shape-id</th>\n",
-       "      <th>fiscal-year</th>\n",
-       "      <th>value</th>\n",
-       "      <th>shape-type</th>\n",
-       "      <th>metric</th>\n",
-       "      <th>shape_match</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>420</th>\n",
-       "      <td>000100</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>402150.0</td>\n",
-       "      <td>census tract</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "      <td>0001002013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421</th>\n",
-       "      <td>000201</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>444900.0</td>\n",
-       "      <td>census tract</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "      <td>0002012013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>422</th>\n",
-       "      <td>000202</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>447581.0</td>\n",
-       "      <td>census tract</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "      <td>0002022013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>000301</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>412700.0</td>\n",
-       "      <td>census tract</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "      <td>0003012013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>424</th>\n",
-       "      <td>000302</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>326650.0</td>\n",
-       "      <td>census tract</td>\n",
-       "      <td>residential-median-value</td>\n",
-       "      <td>0003022013</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    shape-id  fiscal-year     value    shape-type                    metric  \\\n",
-       "420   000100         2013  402150.0  census tract  residential-median-value   \n",
-       "421   000201         2013  444900.0  census tract  residential-median-value   \n",
-       "422   000202         2013  447581.0  census tract  residential-median-value   \n",
-       "423   000301         2013  412700.0  census tract  residential-median-value   \n",
-       "424   000302         2013  326650.0  census tract  residential-median-value   \n",
-       "\n",
-       "    shape_match  \n",
-       "420  0001002013  \n",
-       "421  0002012013  \n",
-       "422  0002022013  \n",
-       "423  0003012013  \n",
-       "424  0003022013  "
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_feat_prop['shape_match'] = (df_feat_prop['shape-id'].astype(str) + df_feat_prop['fiscal-year'].astype(str)).values\n",
-    "df_feat_prop.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'shape_match_array' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-361b95e0c7a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m df_feat_prop.loc[\n\u001b[1;32m      2\u001b[0m             \u001b[0;34m(\u001b[0m\u001b[0mdf_feat_prop\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'metric'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mprop_metrics_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m             \u001b[0;34m(\u001b[0m\u001b[0mdf_feat_prop\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'shape_match'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mshape_match_array\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         ]['value'].iloc[0]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'shape_match_array' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df_feat_prop.loc[\n",
-    "            (df_feat_prop['metric']==prop_metrics_list[0]) &\n",
-    "            (df_feat_prop['shape_match']==shape_match_array[20])\n",
-    "        ]['value'].iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for metric in prop_metrics_list:\n",
-    "    temp_match_dict = dict(\n",
-    "        zip(\n",
-    "            df_feat_prop.loc[df_feat_prop['metric']==metric][['value', 'shape_match']].values[:,1],\n",
-    "            df_feat_prop.loc[df_feat_prop['metric']==metric][['value', 'shape_match']].values[:,0]\n",
-    "        )\n",
-    "    )\n",
-    "    crime_df[metric] = crime_df['tract-match-key'].copy().map(temp_match_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(crime_df.info())\n",
-    "crime_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df_crime['crime-type'].value_counts(dropna=False).sort_index())\n",
-    "print()\n",
-    "print(list(df_crime['crime-type'].value_counts(dropna=False).sort_index().index))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crime_df.to_csv(os.path.join(DATA_ROOT, 'processed/crime-model-data-v1.csv'), index=False)"
    ]
   },
   {
