features: add intro test to feature build notebook

--- a/notebooks/022_FEATURES_build_model_features.ipynb
+++ b/notebooks/022_FEATURES_build_model_features.ipynb
@@ -6,7 +6,46 @@
    "source": [
     "# Notebook 022: Build Model Features\n",
     "\n",
-    "This notebook combines features from the cleansed crime incidents dataset as well as a number of other datasets to append each crime incident record with the additional engineered features used in our analysis"
+    "This notebook combines features from the cleansed crime incidents dataset as well as a number of other datasets to append each crime incident record with the additional engineered features used in our analysis.\n",
+    "\n",
+    "## Contents\n",
+    "\n",
+    "This notebook contains the following high-level sections:\n",
+    "\n",
+    "1. Read in various source datasets (all examined and cleansed in prior notebooks)\n",
+    "1. Merge City of Boston property assessment engineered features\n",
+    "1. Merge NOAA climatological daily weather features\n",
+    "1. Generate a `night` feature using NOAA daily sunrise/sunset times\n",
+    "1. Generate a streetlight density feature using City of Boston streetlight locational data\n",
+    "1. Generate a college or university proximity feature using related City of Boston locational data\n",
+    "1. Generate a highschool proximity feature using related City of Boston public and non-public schools locational data\n",
+    "1. Merge U.S. census-based neighborhood demographic data originated from the 5-year American Community Survey (ACS)\n",
+    "1. Drop unwanted columns and observations with missing predictor values\n",
+    "1. Generate train-test-split of the dataset\n",
+    "1. Generate a version of the dataset with standardized (i.e. scaled) quantitative, non-binary features\n",
+    "1. Generate a `streetlight-night` interaction term to include in our analysis\n",
+    "1. Sort column order of final dataset and save to disk\n",
+    "\n",
+    "## Notebook Output\n",
+    "\n",
+    "This notebook outputs the following .csv files:\n",
+    "\n",
+    "1. **X_train.csv**\n",
+    "1. **X_test.csv**\n",
+    "1. **X_train_scaled.csv** (all non-binary predictors are standardized, fitted using X_train) \n",
+    "1. **X_test_scaled.csv** (all non-binary predictors are standardized, fitted using X_train)\n",
+    "1. **y_train.csv**\n",
+    "1. **y_test.csv**\n",
+    "1. **X_scaler.csv** (this has the predictor-by-predictor means and stds required to restore the scaled datasets to their original values)\n",
+    "\n",
+    "## Data Sources\n",
+    "\n",
+    "All original datasources underlying these engineered features can be found online at various sites. To view a full list of data sources investigated and used, please refer to the `data-inventory.csv` file accessible here:\n",
+    "https://github.com/sedelmeyer/predicting-crime/blob/master/data-inventory.csv\n",
+    "\n",
+    "## Instructions\n",
+    "\n",
+    "To download the original datasources yourself and replicate the underlying cleansed and enhanced datasets merged here you can clone the GitHub repository found here and follow the \"Getting Started\" instructions available in the `README.md` file: https://github.com/sedelmeyer/predicting-crime\n"
    ]
   },
   {
@@ -5323,13 +5362,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create standardized version of feature set and add interaction terms"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -5348,6 +5380,13 @@
    "source": [
     "# review temp drop list created during feature merge\n",
     "temp_drop_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drop unwanted columns and observations with missing predictor values"
    ]
   },
   {
@@ -5496,6 +5535,13 @@
    "source": [
     "# check resulting dataframe\n",
     "df_crime.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate train-test-splits of dataset"
    ]
   },
   {
@@ -5669,6 +5715,13 @@
     "\n",
     "display(y_train.head(2))\n",
     "display(y_test.head(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create standardized version of feature set"
    ]
   },
   {
@@ -5875,6 +5928,13 @@
     "# check results\n",
     "X_scaler.info()\n",
     "X_scaler.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Add a `streetlight-night` interaction term"
    ]
   },
   {
