notebooks: add intro summary text to knn notebooks and renumber subset notebook

--- a/notebooks/025_MODEL_knn.ipynb
+++ b/notebooks/025_MODEL_knn.ipynb
@@ -6,21 +6,35 @@
    "source": [
     "# Notebook 025: KNN Models using Final Predictor Set\n",
     "\n",
-    "This notebook contains a KNN crime-type classifier model using an initial set of property-related predictors.\n",
+    "## Summary\n",
     "\n",
-    "The response variable is:\n",
+    "**This notebook contains a set of k-Nearest Neighbors (kNN) classifier models developed to predict the \"type of crime\" most likely to occur at a given location and point-in-time in the City of Boston.**\n",
+    "\n",
+    "## Interpretation:\n",
+    "\n",
+    "**For an interpretation of the results generated within this notebook, please see the companion webpage located online at this URL:**\n",
+    "\n",
+    "- https://sedelmeyer.github.io/predicting-crime/pages/model-knn.html\n",
+    "\n",
+    "## Response Variable\n",
+    "\n",
+    "**The response variable for the models developed on this page is:**\n",
     "\n",
     "       'crime-type'\n",
     "\n",
-    "Features used in this initial baseline model include:\n",
+    "## Predictors\n",
     "\n",
+    "**Features used as predictors in the models developed on this page include:**\n",
+    "\n",
+    "       'streetlights-night', 'lat', 'lon', 'night', 'tempavg', 'windavg', 'precip', 'snowfall',\n",
+    "       'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday',\n",
+    "       'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec',\n",
+    "       'college-near', 'highschool-near', 'median-age', 'median-income', 'poverty-rate',\n",
+    "       'less-than-high-school-perc', 'bachelor-degree-or-more-perc', 'enrolled-college-perc',\n",
     "       'commercial-mix-ratio', 'industrial-mix-ratio', 'owner-occupied-ratio',\n",
-    "       'residential-median-value', 'residential-gini-coef',\n",
-    "       'industrial-mix-ratio-3yr-cagr', 'commercial-mix-ratio-3yr-cagr',\n",
-    "       'owner-occupied-ratio-3yr-cagr', 'residential-median-value-3yr-cagr',\n",
-    "       'residential-gini-coef-3yr-cagr', 'Tuesday', 'Wednesday', 'Thursday',\n",
-    "       'Friday', 'Saturday', 'Sunday', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
-    "       'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec', 'night'"
+    "       'residential-median-value', 'residential-gini-coef', 'commercial-mix-ratio-3yr-cagr',\n",
+    "       'industrial-mix-ratio-3yr-cagr', 'owner-occupied-ratio-3yr-cagr',\n",
+    "       'residential-gini-coef-3yr-cagr', 'residential-median-value-3yr-cagr'\n"
    ]
   },
   {
