notebooks: add intro text to NN notebooks and renumber title

--- a/notebooks/029_MODEL_NN_classifier.ipynb
+++ b/notebooks/029_MODEL_NN_classifier.ipynb
@@ -6,11 +6,39 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Notebook 030: Neural Networks\n",
+    "# Notebook 029: Neural Networks\n",
     "\n",
-    "This notebook contains a baseline Neural Network for the task of predicting crime types. It takes a while to run so we recommend to just look at the output\n",
+    "## Summary\n",
     "\n",
-    "## Skip to section 2 for the actual work"
+    "**This notebook contains a baseline Neural Network developed to predict the \"type of crime\" most likely to occur at a given location and point-in-time in the City of Boston.**\n",
+    "\n",
+    "Please note that this notebook takes a considerable amount of time to run.\n",
+    "\n",
+    "## Interpretation:\n",
+    "\n",
+    "**For an interpretation of the results generated within this notebook, please see the companion webpage located online at this URL:**\n",
+    "\n",
+    "- https://sedelmeyer.github.io/predicting-crime/pages/model-nn.html\n",
+    "\n",
+    "## Response Variable\n",
+    "\n",
+    "**The response variable for the models developed on this page is:**\n",
+    "\n",
+    "       'crime-type'\n",
+    "\n",
+    "## Predictors\n",
+    "\n",
+    "**Features used as predictors in the models developed on this page include:**\n",
+    "\n",
+    "       'streetlights-night', 'lat', 'lon', 'night', 'tempavg', 'windavg', 'precip', 'snowfall',\n",
+    "       'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday',\n",
+    "       'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec',\n",
+    "       'college-near', 'highschool-near', 'median-age', 'median-income', 'poverty-rate',\n",
+    "       'less-than-high-school-perc', 'bachelor-degree-or-more-perc', 'enrolled-college-perc',\n",
+    "       'commercial-mix-ratio', 'industrial-mix-ratio', 'owner-occupied-ratio',\n",
+    "       'residential-median-value', 'residential-gini-coef', 'commercial-mix-ratio-3yr-cagr',\n",
+    "       'industrial-mix-ratio-3yr-cagr', 'owner-occupied-ratio-3yr-cagr',\n",
+    "       'residential-gini-coef-3yr-cagr', 'residential-median-value-3yr-cagr'"
    ]
   },
   {
@@ -2802,7 +2830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
