--- a/notebooks/030_NN_interpretability.ipynb
+++ b/notebooks/030_NN_interpretability.ipynb
@@ -4,11 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural Network interpretability\n",
+    "# Notebook 030: Neural Network interpretability\n",
     "\n",
-    "Using the NN model trained in Notebook 30 to explore the relationship between predictors and predictions much like in HW7\n",
+    "## Summary\n",
     "\n",
-    "Skip over to the third section for the fun stuff"
+    "**This notebook uses the NN model trained in Notebook 029 to explore the relationship between individual predictors and `crime-type` class predictions.**\n",
+    "\n",
+    "## Interpretation:\n",
+    "\n",
+    "**For an interpretation of the results generated within this notebook, please see the companion webpage located online at this URL:**\n",
+    "\n",
+    "- https://sedelmeyer.github.io/predicting-crime/pages/model-nn.html\n",
+    "\n",
+    "## Response Variable\n",
+    "\n",
+    "**The response variable for the models developed on this page is:**\n",
+    "\n",
+    "       'crime-type'\n",
+    "\n",
+    "## Predictors\n",
+    "\n",
+    "**Features used as predictors in the models developed on this page include:**\n",
+    "\n",
+    "       'streetlights-night', 'lat', 'lon', 'night', 'tempavg', 'windavg', 'precip', 'snowfall',\n",
+    "       'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday',\n",
+    "       'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec',\n",
+    "       'college-near', 'highschool-near', 'median-age', 'median-income', 'poverty-rate',\n",
+    "       'less-than-high-school-perc', 'bachelor-degree-or-more-perc', 'enrolled-college-perc',\n",
+    "       'commercial-mix-ratio', 'industrial-mix-ratio', 'owner-occupied-ratio',\n",
+    "       'residential-median-value', 'residential-gini-coef', 'commercial-mix-ratio-3yr-cagr',\n",
+    "       'industrial-mix-ratio-3yr-cagr', 'owner-occupied-ratio-3yr-cagr',\n",
+    "       'residential-gini-coef-3yr-cagr', 'residential-median-value-3yr-cagr'"
    ]
   },
   {
@@ -777,7 +803,7 @@
      "end_time": "2019-12-09T23:51:58.299658Z",
      "start_time": "2019-12-09T23:51:52.153604Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1034,7 +1060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
